--- a/src/B2CAzureFunc/EmailTemplates/Signup/Signup_inlined_css.html
+++ b/src/B2CAzureFunc/EmailTemplates/Signup/Signup_inlined_css.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org= /TR/xhtml1/DTD/xhtml1-strict.dtd">
+﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org= /TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" style="font-family: Helvetica Neue, Helvetica, Arial, sans-serif; line-height: 150%;">
 
 <head>
@@ -51,7 +51,7 @@
                                             <tbody style="font-family: Helvetica Neue, Helvetica, Arial, sans-serif; line-height: 150%;">
                                                 <tr style="font-family: Helvetica Neue, Helvetica, Arial, sans-serif; line-height: 150%;">
                                                     <td valign="top" style="font-family: Helvetica Neue, Helvetica, Arial, sans-serif; line-height: 150%; -ms-text-size-adjust: 100%; -webkit-text-size-adjust: 100%; mso-table-lspace: 0pt; mso-table-rspace: 0pt; border: 0;">
-                                                        <p style="font-family: Helvetica Neue, Helvetica, Arial, sans-serif; line-height: 150%; -ms-text-size-adjust: 100%; -webkit-text-size-adjust: 100%; margin: 1em 0; padding: 0;">Dear {0},</p>
+                                                        <p style="font-family: Helvetica Neue, Helvetica, Arial, sans-serif; line-height: 150%; -ms-text-size-adjust: 100%; -webkit-text-size-adjust: 100%; margin: 1em 0; padding: 0;">Dear #name#,</p>
                                                     </td>
                                                 </tr>
                                                 <tr style="font-family: Helvetica Neue, Helvetica, Arial, sans-serif; line-height: 150%;">
@@ -59,7 +59,7 @@
                                                         <p style="font-family: Helvetica Neue, Helvetica, Arial, sans-serif; line-height: 150%; -ms-text-size-adjust: 100%; -webkit-text-size-adjust: 100%; margin: 1em 0; padding: 0;">We've created an account for you. 
                                                             <br style="font-family: Helvetica Neue, Helvetica, Arial, sans-serif; line-height: 150%;">
                                                             You'll need to 
-                                                            <a href="{1}" target="_blank" style="font-family: Helvetica Neue, Helvetica, Arial, sans-serif; line-height: 150%; -ms-text-size-adjust: 100%; -webkit-text-size-adjust: 100%; word-wrap: break-word;">activate your account</a>
+                                                            <a href="#link#" target="_blank" style="font-family: Helvetica Neue, Helvetica, Arial, sans-serif; line-height: 150%; -ms-text-size-adjust: 100%; -webkit-text-size-adjust: 100%; word-wrap: break-word;">activate your account</a>
                                                             before you can sign in and access your information.
                                                         </p>
                                                     </td>
