Removed unused emails and updated placeholders

--- a/src/B2CAzureFunc/EmailTemplates/ResetPassword/ResetPassword.html
+++ b/src/B2CAzureFunc/EmailTemplates/ResetPassword/ResetPassword.html
@@ -340,7 +340,7 @@
                                             <tbody>
                                                 <tr>
                                                     <td valign="top">
-                                                        <p>Dear {0},</p>
+                                                        <p>Dear #name#</p>
                                                     </td>
                                                 </tr>
                                                 <tr>
@@ -351,7 +351,7 @@
                                                 <tr>
                                                     <td valign="top">
                                                         <p>
-                                                            <a href="{1}" target="_blank">Reset your password</a>
+                                                            <a href="#link#" target="_blank">Reset your password</a>
                                                         </p>
                                                     </td>
                                                 </tr>
