--- a/src/B2CAzureFunc/EmailTemplates/Signup/Signup.html
+++ b/src/B2CAzureFunc/EmailTemplates/Signup/Signup.html
@@ -340,7 +340,7 @@
                                             <tbody>
                                                 <tr>
                                                     <td valign="top">
-                                                        <p>Dear {0},</p>
+                                                        <p>Dear #name#,</p>
                                                     </td>
                                                 </tr>
                                                 <tr>
@@ -348,7 +348,7 @@
                                                         <p>We've created an account for you. 
                                                             <br/>
                                                             You'll need to 
-                                                            <a href="{1}" target="_blank">activate your account</a>
+                                                            <a href="#link#" target="_blank">activate your account</a>
                                                             before you can sign in and access your information.
                                                         </p>
                                                     </td>
